# Praktikum4_V2

./: CMakeLists.txt  main.c
root/: root.c  root.h
